syntax = "proto3";

option csharp_namespace = "ZeroGdk.Server";

import "google/protobuf/any.proto";

package connection;

enum ConnectionResult {
	Success = 0;
	InternalError = 1;
	MaxWorldConnections = 2;
	MaxWorkerConnections = 3;
	InvalidClientIpAddress = 4;
	WorldNotFound = 5;
	RouteNotFound = 6;
}

message OpenConnectionRequest {
	string route = 1;
	uint32 world_id = 2;
	string connection_id = 3;
	string client_ip = 4;
	bool bypass_max = 5;
	google.protobuf.Any data = 6;
}

message OpenConnectionResponse {
	ConnectionResult result = 1;
	string host = 2;
	int32 port = 3;
	string key = 4;
}